# Taaris

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  docker-compose.yml
backend/: Modelfile  pyproject.toml  requirements.txt
backend/src/: __init__.py  config.py  main.py
backend/src/agent/: __init__.py
backend/src/agent/personas/: __init__.py  core.py
backend/src/agent/tools/: __init__.py
backend/src/llm/: __init__.py  ollama_client.py
backend/src/memory/: __init__.py
backend/src/safety/: __init__.py
backend/src/stt/: __init__.py  deepgram.py
backend/src/tts/: __init__.py  elevenlabs.py
backend/training_data/: conversations_egyptian.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
scripts/: detect_hardware.py
